# CppPerfettoTrace

./: CMakeLists.txt  PerfettoTracing.cpp  PerfettoTracing.h  README.md
example/: CMakeLists.txt  main.cpp
